--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
   <header id='logo'>freedom.js</header>
   <header><span class='triangle'>&#9654;</span> Demos</header>
-  <header><span class='triangle'>&#9654;</span> Chat</header>
+  <header><span class='triangle'>&#9654;</span> Video Chat</header>
   <div style='clear:both; height:15px;'></div>
   <section>
     <div id='messagelist' class='text'></div>
