--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   #buddylist {padding: 5px; margin-left:-5px; min-width: 150px;}
   #msg-input {width:700px; margin:0;}
   #messagelist {height: 400px; overflow-y: scroll; padding-left: 5px;}
-  #container {position: relative;}
+  #container {position: relative; height: 960px;}
   #localVideos {height: 480px;}
   #remoteVideos {position: absolute; left: 0; bottom: 200px}
   </style>
@@ -38,10 +38,10 @@
 
     <div id = 'localVideos'>
       <video id='localVideo' autoplay muted width="640" height="480"></video>
-    </span>
+    </div>
     <div id = 'remoteVideos'>
       <video id='remoteVideo' autoplay></video>
-    </span>
+    </div>
   </div>
 
 </body>
