--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
   section {border: 1px solid black; position:relative; display: inline-block; vertical-align:top;}
   #uid {
         font-family: helvetica; 
-        float:left;
+        float: right;
        }
   #buddylist {padding: 5px; 
-              margin-left:-5px; 
               min-width: 150px;
               border: 1px solid #C0C0C0;
+              float: left;
+              background-color: #FFE4C4;
              }
   #msg-input {
               width:300px; 
@@ -38,7 +39,8 @@
               right: 0;
               height: 30px;
               border: 1px solid black;
-             }
+              background-color: #DCDCDC;         
+            }
   #chat {
                 height: 480px; 
                 position: absolute;
@@ -51,7 +53,7 @@
                   width: 300px;
                   overflow-y: scroll;
                   float: right;
-                  border: 1px dotted black;
+                  border: 1px solid #C0C0C0;
                }
                  
   #container {position: relative; height: 960px;}
