--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
             position: relative;
             height: 1000px;
            }
-  section {border: 1px solid black; position:relative; display: inline-block; vertical-align:top;}
   #uid {
         font-family: helvetica; 
         float: right;
@@ -29,7 +28,7 @@
               min-width: 150px;
               border: 1px solid #C0C0C0;
               float: left;
-              background-color: #FFE4C4;
+              background-color: #F5F5DC;
              }
   #msg-input {
               width:300px; 
@@ -39,7 +38,7 @@
               right: 0;
               height: 30px;
               border: 1px solid black;
-              background-color: #DCDCDC;         
+              background-color: #FAFAD2;         
             }
   #chat {
                 height: 480px; 
@@ -54,11 +53,14 @@
                   overflow-y: scroll;
                   float: right;
                   border: 1px solid #C0C0C0;
+                  background-color: #FAF0E6;
                }
                  
-  #container {position: relative; height: 960px;}
   #localVideos {height: 480px;}
-  #remoteVideos {position: absolute; left: 0; bottom: 200px}
+  #remoteVideos {
+                 position: absolute; 
+                 left: 0; 
+                 bottom: 200px}
   </style>
 </head>
 
@@ -75,17 +77,13 @@
     </div>
     <div id="chat">
         <div id='buddylist'></div>
-    	<div id='messagelist' class='text'></div>
     	<div id='uid'>Logging In</div>
+    	<div id='messagelist' class='text'></div>
     	<input id='msg-input' type='text' placeholder='Type message here'/>
     </div>
-  <div id='container'>
-
     <div id = 'remoteVideos'>
-      <video id='remoteVideo' autoplay></video>
     </div>
   </div>
-</div>
 
 </body>
 </html>
