--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     #uid {
       font-family: helvetica; 
       float: right;
+      font-weight: 500;
+      text-color: #008080;
     }
     #buddylist {
       padding: 5px; 
