--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     #room {
       height: 30px; 
       position: absolute;
-      top: 0;
+      top: 640px;
       left: 0;
       width: 300px;
     }
@@ -89,6 +89,7 @@
       position: absolute;
       bottom: 0;
       right: 0;
+      left: 150px;
       height: 30px;
       border: 1px solid black;
       background-color: #FAFAD2;         
