--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
       position: absolute;
       bottom: 0;
       right: 0;
+      left: 0;
       height: 30px;
       border: 1px solid black;
       background-color: #FAFAD2;         
