--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
       <div id='messagelist' class='text'></div>
       <input id='msg-input' type='text' placeholder='Type message here'/>
     </div>
-    <div id="room">
+    <!-- div id="room">
        <input id='createRoom' type='text' placeholder='Create room here' />
        <input id='joinRoom' type='text' placeholder='Join room here' />
-    </div>
+    </div -->
     <div id = 'remoteVideos'>
     </div>
   </div>
